--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 rasa==3.6.20
 rasa-sdk==3.6.2
-streamlit==1.28.1
-requests==2.31.0
+tensorflow-intel==2.12.1
+scikit-learn==1.3.2
+scikit-fuzzy==0.4.2
 pandas==2.0.3
-plotly==5.17.0
 sqlalchemy==1.4.53
 psycopg2-binary==2.9.7
 python-dateutil==2.8.2
 dateparser==1.1.8
-scikit-fuzzy==0.4.2
 numpy==1.24.4
+requests==2.31.0
 matplotlib==3.7.2
+streamlit==1.28.1
+plotly==5.17.0
+typing-extensions==4.5.0
+google-api-python-client==2.125.0
+python-dotenv==1.0.0
